--- a/pro16_test/WebContent/test03/ajax3.html
+++ b/pro16_test/WebContent/test03/ajax3.html
@@ -13,7 +13,7 @@
 			}
 			$.ajax({
 				type:"post",
-				async:true,
+				async:false,
 				url:"http://localhost:8080/pro16_test/mem",
 				dataType:"text",
 				data: {id: _id},
